feat: created side menu component, to do : mobile view side menu

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 ::-webkit-scrollbar {
-    width: 0;
-  }
-  
+  width: 0;
+}
+
+.block-scroll {
+  background-color: black;
+}
