feat: add new params to usegetanimalbyid hook, add dinamic page to handle animals

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,16 @@
 @tailwind utilities;
 
 ::-webkit-scrollbar {
-  width: 0;
+  width: 5px;
+
+  background-color: #d1d8db;
+}
+::-webkit-scrollbar-thumb {
+  width: 8px;
+  height: 10%;
+  background-color: #68a6c8;
+  border: 1px solid #68a6c8;
+  border-radius: 9px;
 }
 
 .block-scroll {
